Archivos parciales para el header, footer y headerLogueado, correcion de los hipervinculos y de algunos links de css

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -154,7 +154,8 @@ hr {
 
 /*====== Banner ======*/
 .banner {
-  background-image: url(/images/img-home-banner.jpg);
+  /* ESTO ESTA DOBLE */
+  /* background-image: url(/images/img-home-banner.jpg); */
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center center;
