--- a/views/login.ejs
+++ b/views/login.ejs
@@ -28,14 +28,24 @@
 				<h2 class="products-title">Ingresar</h2>
 			</div>
 			<!-- Show the "ultimos" products -->
-			<h2 class="col-12"> <i>///////////////////////////////////////// <br> Acá va el formulario de login. <br>
-			Debe cumplir con los puntos de la consigna y ser coherente con la tabla de la base de datos <br>
-			Eliminen estás líneas y coloquen el formulario. <br>
-			Recuerden todo lo que necesita tanto la etiqueta form como los campos input para operar correctamtente</i> <br>
-			////////////////
-			</h2>
+		<h2>
+			<section class="login"> 
+				<form action="/" method="get" class="formLogin">
+					<label for="email">Usuario</label>
+					<input id="email" name="email" type="email" placeholder="Ingrese su usuario">
+					
+					<label for="password">Contraseña</label>
+					<input id="password" name="password" type="password" placeholder="Ingrese su contraseña">
+					
+					<label class="recordarme">
+						<input type="checkbox" name="recordarme" value="r">
+						Recordarme
+					</label>
 
-
+					<button type="submit">Iniciar Sesión</button>
+				</form>
+			</section>
+		</h2>
 	<!-- footer -->
 	<%- include("./partials/footer") %>
 	<!-- /footer -->
