--- a/views/register.ejs
+++ b/views/register.ejs
@@ -28,11 +28,30 @@
 				<h2 class="products-title">Registrate</h2>
 			</div>
 			<!-- Show the "ultimos" products -->
-			<h2 class="col-12"> <i>///////////////////////////////////////// <br> Acá va el formulario de registro. <br>
-			Debe cumplir con los puntos de la consigna y ser coherente con la tabla de la base de datos <br>
-			Eliminen estás líneas y coloquen el formulario. <br>
-			Recuerden todo lo que necesita tanto la etiqueta form como los campos input para operar correctamtente</i> <br>
-			////////////////
+			<h2>
+				<section class="register">  
+					<form action="/" method="get" class="formRegister">
+
+						<label for="email">Correo Electrónico</label>
+						<input id="email" name="email" type="email" placeholder="Ingrese su email">
+						
+						<label>Usuario</label>
+						<input id="usuario" name="usuario" type="text" placeholder="Cree un usuario">
+
+						<label for="password">Contraseña</label>
+						<input id="password" name="password" type="password" placeholder="Cree una contraseña">
+						
+						<label>Fecha de nacimiento</label>
+						<input id="fechaNacimiento" name="fechaNacimiento" type="date" placeholder="dd/mm/aaaa">
+
+						<label>Foto de perfil</label>
+						<input id="fotoPerfil" name="fotoPerfil" type="text" placeholder="Ingrese su foto de perfil">
+						<div class="password"></div>
+				
+						<button type="submit">Registrarse</button>
+						<p class="abajoDelBoton"><a href="./login.html">¿Ya tienes una cuenta? Inicia sesión aquí</a></p>
+					</form>
+				</section>
 			</h2>
 
 
