punto1 migracion a node y express terminado

--- a/views/partials/headerLogueado.ejs
+++ b/views/partials/headerLogueado.ejs
@@ -51,10 +51,9 @@
 				</ul>
 	
 				<ul class="right-navbar">
-					<li><a href="profile.html">
-							Nombre del usuario <i class="fas fa-user"></i>
-						</a>
-					</li>
+					<li><a href="../profile.ejs">
+						<%= user.username %> <i class="fas fa-user"></i>
+					</a></li>					
 					<li>
 						<form action="" method="post">
 							<button class="logout" type="submit">
