--- a/views/login.ejs
+++ b/views/login.ejs
@@ -30,7 +30,7 @@
 			<!-- Show the "ultimos" products -->
 		<h2>
 			<section class="login"> 
-				<form action="/" method="get" class="formLogin">
+				<form action="/profile" method="get" class="formLogin">
 					<label for="email">Usuario</label>
 					<input id="email" name="email" type="email" placeholder="Ingrese su usuario">
 					
