--- a/views/index.ejs
+++ b/views/index.ejs
@@ -32,7 +32,23 @@
 				<h2 class="products-title">Productos</h2>
 			</div>
 			<!-- Show the "ultimos" products -->
-			<div class="col-12 col-sm-6 col-lg-3">
+			<% for (let i = 0; i < productos.length; i++) { %>
+				<div class="col-12 col-sm-6 col-lg-3">
+					<section class="product-box">
+						<a href="/products/<%= i %>">
+							<figure class="product-box_image">
+								<img src="<%= productos[i].image %>" alt="<%= productos[i].name %>">
+							</figure>
+							<article class="product-box_data">
+								<h2><%= productos[i].name %></h2>
+								<p><%= productos[i].description %></p>
+								<p>Comentarios: <%= productos[i].comments.length %></p>
+							</article>
+						</a>
+					</section>
+				</div>
+			<% } %>
+			<!-- <div class="col-12 col-sm-6 col-lg-3">
 				<section class="product-box">
 					<a href="/products">
 						<figure class="product-box_image">
@@ -90,7 +106,7 @@
 						</article>
 					</a>
 				</section>
-			</div>
+			</div> -->
 		</div>
 	</div>
 
