--- a/views/partials/headerLogueado.ejs
+++ b/views/partials/headerLogueado.ejs
@@ -26,7 +26,7 @@
 				</div>
 	
 				<div class="col-7 col-md-6">
-					<form action="" method="GET" class="search-form">
+					<form action="/search" method="GET" class="search-form">
 						<input type="text" name="search" placeholder="Buscar productos, marcas y más" class="search-form_input">
 						<button type="submit" class="search-form_button"><i class="fas fa-search"></i></button>
 					</form>
@@ -46,8 +46,8 @@
 	
 			<nav class="main-navbar">
 				<ul class="left-navbar">
-					<li><a href="index.html">Todos los productos</a></li>
-					<li><a href="product-add.html">Cargar productos</a></li>
+					<li><a href="/">Todos los productos</a></li>
+					<li><a href="/productAdd">Cargar productos</a></li>
 				</ul>
 	
 				<ul class="right-navbar">
@@ -55,7 +55,7 @@
 						<%= user.username %> <i class="fas fa-user"></i>
 					</a></li>					
 					<li>
-						<form action="" method="post">
+						<form action="/" method="get">
 							<button class="logout" type="submit">
 								Cerrar sesión <i class="fas fa-sign-in-alt"></i>
 							</button>
