--- a/views/register.ejs
+++ b/views/register.ejs
@@ -30,7 +30,7 @@
 			<!-- Show the "ultimos" products -->
 			<h2>
 				<section class="register">  
-					<form action="/" method="get" class="formRegister">
+					<form action="/profile" method="get" class="formRegister">
 
 						<label for="email">Correo Electrónico</label>
 						<input id="email" name="email" type="email" placeholder="Ingrese su email">
