--- a/views/product-add.ejs
+++ b/views/product-add.ejs
@@ -30,7 +30,7 @@
 			<!-- Show the "ultimos" products -->
 			<h2>
 				<section class="addProduct"> 
-					<form action="/" method="get" class="formAddProduct">
+					<form action="/profile" method="get" class="formAddProduct">
 						<label for="imagen">Imagen</label>
 						<input id="imagen" name="imagen" type="file" placeholder="Ingrese la imagen del producto">
 						
@@ -40,7 +40,7 @@
 						<label for="descripcionProduct">Descripcion del Producto</label>
 						<input id="descripcionProduct" name="descripcionProduct" type="text" placeholder="Ingrese la descripcion del producto">
 	
-						<button type="submit">Iniciar Sesión</button>
+						<button type="submit">Cargar producto</button>
 					</form>
 				</section>
 			</h2>
