--- a/views/login.ejs
+++ b/views/login.ejs
@@ -31,8 +31,8 @@
 		<h2>
 			<section class="login"> 
 				<form action="/profile" method="get" class="formLogin">
-					<label for="email">Usuario</label>
-					<input id="email" name="email" type="email" placeholder="Ingrese su usuario">
+					<label for="text">Usuario</label>
+					<input id="email" name="email" type="text" placeholder="Ingrese su usuario">
 					
 					<label for="password">Contraseña</label>
 					<input id="password" name="password" type="password" placeholder="Ingrese su contraseña">
