--- a/public/css/app.css
+++ b/public/css/app.css
@@ -64,6 +64,29 @@ hr {
   border-bottom: solid 1px var(--light-gray);
 }
 
+/* ej 2, punto 3 */
+h1, h2, h3 {
+  font-family: "Bebas Neue"
+}
+
+body, p, span, label {
+  font-family: "Roboto"
+}
+
+/* ej3 punto 2 */
+a {
+  font-weight: bold;
+  text-decoration: underline;
+  color: #007BFF;
+}
+
+.titulo-en-header {
+  font-family: "Pacifico";
+  font-size: 2;
+  color: #889420;
+}
+
+
 
 /*====== Main Header ======*/
 .main-header {
