--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -1,4 +1,6 @@
 <header class="main-header">
+    <h1 class="titulo-en-header">Mercado Libre Grupo 2</h1>
+
     <div class="container">
         <div class="row align-items-center">
             <div class="col-5 col-md-2">
