--- a/views/search-results.ejs
+++ b/views/search-results.ejs
@@ -14,6 +14,8 @@
 	<link rel="stylesheet" href="/css/bootstrap-grid.min.css">
 	<!-- Own Stylesheet -->
 	<link rel="stylesheet" href="/css/app.css">
+	<link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Roboto&display=swap" rel="stylesheet">
+
 </head>
 
 <body>
@@ -28,14 +30,13 @@
 			</div>
 			<!-- Show the "ultimos" products -->
 			<!--<h2 class="col-12">  -->
-		   
 			<% if (productos.length > 0) { %>
 				<% for (let i = 0; i < productos.length; i++) { %>
 				<article class="col-12 col-lg-8 product-detail-info">
 					<h2><%= productos[i].name %></h2>
 					<img src="<%= productos[i].image %>" alt="<%= productos[i].name %>" class="product-detail-img">
-					  <p class="product-detail-description"><%= productos[i].description %></p>
-					  <% } %>
+					<p class="product-detail-description"><%= productos[i].description %></p>
+					<% } %>
 				</article>
 			<% } else { %>
 				<p class="product-detail-description">No se encontraron resultados.</p>
