--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -1,5 +1,5 @@
 <header class="main-header">
-    <h1 class="titulo-en-header">Mercado Libre Grupo 2</h1>
+    <h1 class="titulo-en-header">Todo Terreno</h1>
 
     <div class="container">
         <div class="row align-items-center">
