--- a/public/css/app.css
+++ b/public/css/app.css
@@ -29,7 +29,7 @@ body {
 body {
   font-family: var(--base-font-family);
   font-weight: 300;
-  background-color: var(--light-gray);
+  background-color: #F2E8D5; /*cambio color del fondo*/
 }
 
 ul,
@@ -39,11 +39,7 @@ ol {
   padding: 0;
 }
 
-a {
-  display: inline-block;
-  text-decoration: none;
-  color: inherit;
-}
+/*SAQUE EL A DE ACA*/
 
 figure {
   margin: 0;
@@ -65,7 +61,7 @@ hr {
 }
 
 /* ej 2, punto 3 */
-h1, h2, h3 {
+h2, h3 {
   font-family: "Bebas Neue"
 }
 
@@ -74,24 +70,20 @@ body, p, span, label {
 }
 
 /* ej3 punto 2 */
-a {
+/* a {
   font-weight: bold;
   text-decoration: underline;
   color: #007BFF;
-}
+} */
 
-.titulo-en-header {
-  font-family: "Pacifico";
-  font-size: 2;
-  color: #889420;
-}
+
 
 
 
 /*====== Main Header ======*/
 .main-header {
   padding: 15px 0;
-  background-color: var(--yellow);
+  background-color: #A3B18A;
 }
 
 .main-header_home-link,
@@ -173,7 +165,15 @@ a {
   border-bottom: solid 1px var(--gray);
 }
 
-
+a {
+  display: inline-block;
+  color: #607D8B;
+  font-family: "Xanh Mono", monospace;
+  font-weight: 400;
+  font-style: normal;
+  text-decoration: none;
+  font-size: 1em;
+  }
 
 /*====== Banner ======*/
 .banner {
@@ -220,6 +220,7 @@ a {
   display: flex;
   align-items: center;
   flex-wrap: wrap;
+  text-decoration: none;
 }
 
 .product-box_data h2 {
@@ -329,15 +330,19 @@ a {
 }
 
 .product-detail-img {
-  width: 70%;
+  width: 20vw;
   display: block;
-  margin: auto;
+  margin: none;
 }
 
 .product-detail-info {
   border-right: 1px solid var(--light-gray);
   padding: 15px;
   /* height: 100%; */
+}
+
+.product-detail-info h2{
+  font-size: 25px;
 }
 
 .product-detail-title {
@@ -505,6 +510,80 @@ textarea.form-input {
   color: #fff;
 }
 
+/* FORM REGISTRO */
+.formLogin, .formRegister, .formAddProduct{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: flex-start;
+  border-radius: 10px;
+  padding: 20px;
+  width: 90%;
+  max-width: 400px;
+  margin: 0;
+  padding: 10px;
+}
+
+.register a{
+  text-decoration: underline;
+}
+
+.register input{
+margin: 15px 0;
+}
+
+.login input{
+margin: 15px 0;
+}
+
+.addProduct input{
+margin: 15px 0;
+}
+
+/* TIPOGRAFIA */
+
+.titulo-en-header {
+font-family: "Bebas Neue", sans-serif;
+font-weight: 400;
+font-style: normal;
+font-size: 36px;
+text-align: center;
+color: #5A3E2B;
+}
+
+.main-navbar a{
+  font-family: "Xanh Mono", monospace;
+  font-size: 1em;
+  text-decoration: underline;
+}
+
+.right-navbar{
+  font-family: "Xanh Mono", monospace;
+  font-size: 1.5em;
+  text-decoration: underline;
+}
+
+.left-navbar{
+  font-family: "Xanh Mono", monospace;
+  font-size: 1.5em;
+  text-decoration: underline;
+}
+
+
+body {
+  font-family: 'Xanh Mono', monospace;
+}
+
+h2, h3 {
+  font-family: 'Bebas Neue', sans-serif;
+}
+
+.desc{
+  font-size: 15px;
+  margin-left: 30px;
+
+}
+
 
 /*====== Media-Queries ======*/
 @media (min-width: 768px) {
@@ -556,39 +635,4 @@ textarea.form-input {
     width: 95%;
     margin: auto;
   }
-}
-
-/* FORM REGISTRO */
-.formLogin, .formRegister, .formAddProduct{
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: flex-start;
-    border-radius: 10px;
-    padding: 20px;
-    width: 90%;
-    max-width: 400px;
-    margin: 0;
-    padding: 10px;
-}
-
-.register input{
-  margin: 15px 0;
-}
-
-.login input{
-  margin: 15px 0;
-}
-
-.addProduct input{
-  margin: 15px 0;
-}
-
-/* TIPOGRAFIA */
-h1{
-  font-family: 'Anton', sans-serif;
-}
-
-h2{
-  font-family: 'Playfair Display';
 }
