--- a/views/partials/headerLogueado.ejs
+++ b/views/partials/headerLogueado.ejs
@@ -6,17 +6,23 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link width="" rel="shortcut icon" href="./images/logo-mercado-liebre.jpg" />
 	
-	<title> Mercado Liebre Argentina</title>
+	<title>Todo Terreno</title>
 			<!-- Font Awesome Stylesheet -->
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.min.css">
 	<!-- Bootstrap Grid Stylesheet -->
 	<link rel="stylesheet" href="/css/bootstrap-grid.min.css">
 	<!-- Own Stylesheet -->
 	<link rel="stylesheet" href="/css/app.css">
+	<link rel="preconnect" href="https://fonts.googleapis.com">
+	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+	<link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Xanh+Mono:ital@0;1&display=swap" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css2?family=Xanh+Mono:ital@0;1&display=swap" rel="stylesheet">
+	
 </head>
 <body>
 	<!-- Header -->
 	<header class="main-header">
+		<h1 class="titulo-en-header">Todo Terreno</h1>
 		<div class="container">
 			<div class="row align-items-center">
 				<div class="col-5 col-md-2">
@@ -51,7 +57,7 @@
 				</ul>
 	
 				<ul class="right-navbar">
-					<li><a href="../profile.ejs">
+					<li><a href="/profile">
 						<%= user.usuario %> <i class="fas fa-user"></i>
 					</a></li>					
 					<li>
