--- a/public/css/app.css
+++ b/public/css/app.css
@@ -86,6 +86,10 @@ body, p, span, label {
   background-color: #A3B18A;
 }
 
+.logo{
+  border-radius: 100%;
+}
+
 .main-header_home-link,
 .main-header_credit-link {
   display: block;
@@ -178,11 +182,11 @@ a {
 /*====== Banner ======*/
 .banner {
   /* ESTO ESTA DOBLE */
-  /* background-image: url(/images/img-home-banner.jpg); */
+  /* background-image: url(/images/bannerNos.jpg);  */
   background-repeat: no-repeat;
-  background-size: cover;
+  background-size: contain;
   background-position: center center;
-  height: 100px;
+  height: 10%;
 }
 
 
@@ -193,9 +197,10 @@ a {
 }
 
 .products-title {
-  font-size: 2.4em;
+  font-size: 3em;
   font-weight: 400;
-  color: var(--gray);
+  color: black;
+  text-align: center;
 }
 
 .product-box {
@@ -282,6 +287,13 @@ a {
   box-shadow: 0 0 5px var(--green);
 }
 
+.productSearch{
+  background-color: white;
+  margin: 2%;
+  border: 2px solid black;
+}
+
+
 /*====== Footer ======*/
 .main-footer {
   background-color: #ffffff;
@@ -320,6 +332,8 @@ a {
   color: var(--gray);
   padding: 15px 0;
 }
+
+.products-title
 
 
 /*====== Product Detail ======*/
@@ -515,13 +529,17 @@ textarea.form-input {
   display: flex;
   flex-direction: column;
   justify-content: center;
-  align-items: flex-start;
+  align-items: center;
   border-radius: 10px;
   padding: 20px;
-  width: 90%;
-  max-width: 400px;
+  width: 100%;
   margin: 0;
   padding: 10px;
+}
+
+.register{
+  background-color: white;
+  border: 2px solid black;
 }
 
 .register a{
@@ -593,7 +611,11 @@ h2, h3 {
   }
 
   .banner {
-    height: 320px;
+    height: 340px;
+  }
+
+  .banner img{
+    height: 100%;
   }
 
   .btn-toggle-navbar {
