--- a/views/index.ejs
+++ b/views/index.ejs
@@ -26,7 +26,7 @@
 	
 	<!-- Banner -->
 	<div class="banner">
-		<img src="/images/img-home-banner.jpg" alt="Banner de ofertas">
+		<img src="/images/bannerNos1.jpg" alt="">
 	</div>
 	<!-- /Banner -->
 
@@ -40,7 +40,7 @@
 			<% for (let i = 0; i < productos.length; i++) { %>
 				<div class="col-12 col-sm-6 col-lg-3">
 					<section class="product-box">
-						<a href="/products/<%= i %>">
+						<a href="/products/detalle/<%= i %>">
 							<figure class="product-box_image">
 								<img src="<%= productos[i].image %>" alt="<%= productos[i].name %>">
 							</figure>
