--- a/views/login.ejs
+++ b/views/login.ejs
@@ -35,7 +35,7 @@
 			<!-- Show the "ultimos" products -->
 		<h2>
 			<section class="login"> 
-				<form action="/profile" method="get" class="formLogin">
+				<form action="/users/profile" method="get" class="formLogin">
 					<label for="text">Usuario</label>
 					<input id="email" name="email" type="text" placeholder="Ingrese su usuario">
 					
