--- a/views/partials/headerLogueado.ejs
+++ b/views/partials/headerLogueado.ejs
@@ -53,11 +53,11 @@
 			<nav class="main-navbar">
 				<ul class="left-navbar">
 					<li><a href="/">Todos los productos</a></li>
-					<li><a href="/productAdd">Cargar productos</a></li>
+					<li><a href="/products/productAdd">Cargar productos</a></li>
 				</ul>
 	
 				<ul class="right-navbar">
-					<li><a href="/profile">
+					<li><a href="/users/profile">
 						<%= user.usuario %> <i class="fas fa-user"></i>
 					</a></li>					
 					<li>
