--- a/views/search-results.ejs
+++ b/views/search-results.ejs
@@ -35,7 +35,7 @@
 			<!--<h2 class="col-12">  -->
 			<% if (productos.length > 0) { %>
 				<% for (let i = 0; i < productos.length; i++) { %>
-					<article class="col-12 col-lg-8 product-detail-info">
+					<article class="col-12 col-lg-8 product-detail-info productSearch">
 						<h2><%= productos[i].name %></h2>
 						<img src="<%= productos[i].image %>" alt="<%= productos[i].name %>" class="product-detail-img">
 						<p class="product-detail-description"><%= productos[i].description %> <br> 
