--- a/views/product-add.ejs
+++ b/views/product-add.ejs
@@ -5,7 +5,8 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<link width="" rel="shortcut icon" href="/images/logo-mercado-liebre.jpg" />
+	<link width="" rel="shortcut icon" href="/images/bannerNos1.jpg" />
+	<div class="banner">
 
 	<title>Todo Terreno</title>
 	<!-- Font Awesome Stylesheet -->
@@ -32,7 +33,7 @@
 			<!-- Show the "ultimos" products -->
 			<h2>
 				<section class="addProduct"> 
-					<form action="/profile" method="get" class="formAddProduct">
+					<form action="/users/profile" method="get" class="formAddProduct">
 						<label for="imagen">Imagen</label>
 						<input id="imagen" name="imagen" type="file" placeholder="Ingrese la imagen del producto">
 						
