--- a/views/register.ejs
+++ b/views/register.ejs
@@ -5,7 +5,7 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<link width="" rel="shortcut icon" href="/images/logo-mercado-liebre.jpg" />
+	<link width="" rel="shortcut icon" href="/images/bannerNos1.jpg" />
 
 	<title>Todo Terreno</title>
 	<!-- Font Awesome Stylesheet -->
@@ -35,7 +35,7 @@
 			<!-- Show the "ultimos" products -->
 			<h2>
 				<section class="register">  
-					<form action="/profile" method="get" class="formRegister">
+					<form action="/users/profile" method="get" class="formRegister">
 
 						<label for="email">Correo Electrónico</label>
 						<input id="email" name="email" type="email" placeholder="Ingrese su email">
@@ -54,7 +54,7 @@
 						<div class="password"></div>
 				
 						<button type="submit">Registrarse</button>
-						<p class="abajoDelBoton"><a href="/login">¿Ya tienes una cuenta? Inicia sesión aquí</a></p>
+						<p class="abajoDelBoton"><a href="/users/login">¿Ya tienes una cuenta? Inicia sesión aquí</a></p>
 					</form>
 				</section>
 			</h2>
