--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -27,4 +27,5 @@
             </div>
         </div>
     </div>
+    <h3 class="creditos">Elaborado por Josefina Janeiro, Franco Longinotti y Marcos Vidou</h3>
 </footer>
