--- a/views/login.ejs
+++ b/views/login.ejs
@@ -25,32 +25,28 @@
 	<!-- Header -->
 	<%- include('./partials/header') %>
 	<!-- /Header -->
+	 
+	<div class="col-12">
+		<h2 class="products-title">Ingresar</h2>
+	</div>
+	<!-- Formulario Login -->
+	<section class="login"> 
+		<form action="/users/profile" method="get" class="formLogin">
+			<label for="text">Usuario</label>
+			<input id="email" name="email" type="text" placeholder="Ingrese su usuario">
+			
+			<label for="password">Contraseña</label>
+			<input id="password" name="password" type="password" placeholder="Ingrese su contraseña">
+			
+			<label class="recordarme">
+				<input type="checkbox" name="recordarme" value="r">
+				Recordarme
+			</label>
 
-	<!-- Novedades -->
-	<div class="container products-wrapper">
-		<div class="row">
-			<div class="col-12">
-				<h2 class="products-title">Ingresar</h2>
-			</div>
-			<!-- Show the "ultimos" products -->
-		<h2>
-			<section class="login"> 
-				<form action="/users/profile" method="get" class="formLogin">
-					<label for="text">Usuario</label>
-					<input id="email" name="email" type="text" placeholder="Ingrese su usuario">
-					
-					<label for="password">Contraseña</label>
-					<input id="password" name="password" type="password" placeholder="Ingrese su contraseña">
-					
-					<label class="recordarme">
-						<input type="checkbox" name="recordarme" value="r">
-						Recordarme
-					</label>
+			<button type="submit">Iniciar Sesión</button>
+		</form>
+	</section>
 
-					<button type="submit">Iniciar Sesión</button>
-				</form>
-			</section>
-		</h2>
 	<!-- footer -->
 	<%- include("./partials/footer") %>
 	<!-- /footer -->
