--- a/views/register.ejs
+++ b/views/register.ejs
@@ -26,39 +26,35 @@
 	<%- include('./partials/header') %>
 	<!-- /Header -->
 
-	<!-- Novedades -->
-	<div class="container products-wrapper">
-		<div class="row">
-			<div class="col-12">
-				<h2 class="products-title">Registrate</h2>
-			</div>
-			<!-- Show the "ultimos" products -->
-			<h2>
-				<section class="register">  
-					<form action="/users/profile" method="get" class="formRegister">
+	<div class="col-12">
+		<h2 class="products-title">Registrate</h2>
+	</div>
 
-						<label for="email">Correo Electrónico</label>
-						<input id="email" name="email" type="email" placeholder="Ingrese su email">
-						
-						<label>Usuario</label>
-						<input id="usuario" name="usuario" type="text" placeholder="Cree un usuario">
+	<!-- Formulario Register -->
+			
+	<section class="register">  
+		<form action="/users/profile" method="get" class="formRegister">
 
-						<label for="password">Contraseña</label>
-						<input id="password" name="password" type="password" placeholder="Cree una contraseña">
-						
-						<label>Fecha de nacimiento</label>
-						<input id="fechaNacimiento" name="fechaNacimiento" type="date" placeholder="dd/mm/aaaa">
+			<label for="email">Correo Electrónico</label>
+			<input id="email" name="email" type="email" placeholder="Ingrese su email">
+			
+			<label>Usuario</label>
+			<input id="usuario" name="usuario" type="text" placeholder="Cree un usuario">
 
-						<label>Foto de perfil</label>
-						<input id="fotoPerfil" name="fotoPerfil" type="text" placeholder="Ingrese su foto de perfil">
-						<div class="password"></div>
-				
-						<button type="submit">Registrarse</button>
-						<p class="abajoDelBoton"><a href="/users/login">¿Ya tienes una cuenta? Inicia sesión aquí</a></p>
-					</form>
-				</section>
-			</h2>
+			<label for="password">Contraseña</label>
+			<input id="password" name="password" type="password" placeholder="Cree una contraseña">
+			
+			<label>Fecha de nacimiento</label>
+			<input id="fechaNacimiento" name="fechaNacimiento" type="date" placeholder="dd/mm/aaaa">
 
+			<label>Foto de perfil</label>
+			<input id="fotoPerfil" name="fotoPerfil" type="text" placeholder="Ingrese su foto de perfil">
+			<div class="password"></div>
+	
+			<button type="submit">Registrarse</button>
+			<p class="abajoDelBoton"><a href="/users/login">¿Ya tienes una cuenta? Inicia sesión aquí</a></p>
+		</form>
+	</section>
 
 	<!-- footer -->
 	<%- include("./partials/footer") %>
