--- a/views/index.ejs
+++ b/views/index.ejs
@@ -40,14 +40,14 @@
 			<% for (let i = 0; i < productos.length; i++) { %>
 				<div class="col-12 col-sm-6 col-lg-3">
 					<section class="product-box">
-						<a href="/products/detalle/<%= i %>">
+						<a href="/products/detalle/<%= productos[i].id %>">
 							<figure class="product-box_image">
-								<img src="<%= productos[i].image %>" alt="<%= productos[i].name %>">
+								<img src="<%= productos[i].foto %>" alt="<%= productos[i].nombre %>">
 							</figure>
 							<article class="product-box_data">
-								<h2><%= productos[i].name %></h2>
-								<p><%= productos[i].description %></p>
-								<p>Comentarios: <%= productos[i].comments.length %></p>
+								<h2><%= productos[i].nombre %></h2>
+								<p><%= productos[i].descripcion %></p>
+								<p>Comentarios: <%= productos[i].comentarios.length %></p>
 							</article>
 						</a>
 					</section>
