--- a/views/login.ejs
+++ b/views/login.ejs
@@ -23,7 +23,12 @@
 
 <body>
 	<!-- Header -->
-	<%- include('./partials/header') %>
+	<% if(locals.user != undefined){ %>
+		<%- include('./partials/headerLogueado') %>
+	<% } %>
+	<% if(locals.user == undefined){ %>
+		<%- include('./partials/header') %>
+	<% } %>
 	<!-- /Header -->
 	 
 	<div class="col-12">
@@ -31,7 +36,7 @@
 	</div>
 	<!-- Formulario Login -->
 	<section class="login"> 
-		<form action="/users/profile" method="POST" class="formLogin">
+		<form action="/users/login" method="POST" class="formLogin">
 			<label for="text">Usuario</label>
 			<input id="email" name="email" type="text" placeholder="Ingrese su usuario">
 			
