--- a/views/partials/headerLogueado.ejs
+++ b/views/partials/headerLogueado.ejs
@@ -57,9 +57,18 @@
 				</ul>
 	
 				<ul class="right-navbar">
-					<li><a href="/users/profile">
-						<%= user.usuario %> <i class="fas fa-user"></i>
-					</a></li>					
+					
+					<li>
+						<a href="/users/profile">
+							<i class="fas fa-user"></i>
+						</a>
+					</li>
+					<li>
+						<% if (locals.user != undefined) { %>
+							<p><%= locals.user.nombre %></p> 	
+						<% } %>
+					</li>	
+
 					<li>
 						<form action="/" method="get">
 							<button class="logout" type="submit">
