--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -25,23 +25,33 @@
 	<section class="info-usuario container products-wrapper">
 		<div class="row">
 			<div class="img-container offset-3 col-2">
-				<img src="<%= user.fotoPerfil %>" alt="foto de perfil" class="foto-perfil">
-			</div>
+				<% if(locals.user != undefined){ %>
+					<img src="<%= locals.user.fotoPerfil %>" alt="foto de perfil" class="foto-perfil">
+				<% } %>
+				</div>
 			<div class="data-container col-6">
 				<div class="d-flex align-items-center ">
-					<h1 class="main-title"><%= user.usuario %>
+					<h1 class="main-title">
+						<% if(locals.user != undefined){ %>
+							<%= locals.user.nombre %>
+						<% } %>
 						<a href="profile-edit.html">
 							<i class="fas fa-cog"></i>
 						</a>
 					</h1>
+					
+				
 					<a class="btn mt-3 ml-4" href="">SEGUIR</a>
+					
 				</div>
 				<div>
 					<ul class="">
-						<p><%= user.email %></p>
-						<li>8 productos</li>
+					<% if(locals.user != undefined){ %>
+						<p><%= locals.user.email %></p>
+					<% } %>
+						<li><%= usuario.productos.length %> productos</li>
 						<li>200 seguidores</li>
-						<li>300 comentarios</li>
+						<li><%= usuario.comentarios.length %> comentarios</li>
 					</ul>
 				</div>
 			</div>
@@ -56,25 +66,31 @@
 				<h2 class="products-title">Mis productos</h2>
 			</div>
 			<!-- Show mis productos -->
-			<% for (let i = 0; i < productos.length; i++) { %>
+			<% for (let i = 0; i < usuario.productos.length; i++) { %>
 				<div class="col-12 col-sm-6 col-lg-3">
 					<section class="product-box">
-						<a href="/products/<%= i %>">
+						<a href="/products/detalle/<%= usuario.productos[i].id %>">
 							<figure class="product-box_image">
-								<img src="<%= productos[i].image %>" alt="<%= productos[i].name %>">
+								<img src="<%= usuario.productos[i].foto %>" alt="<%= usuario.productos[i].nombre %>">
 							</figure>
-							<article class="product-box_data">
-								<h2><%= productos[i].name %></h2>
-								<p><%= productos[i].description %></p>
-								<p>Comentarios: <%= productos[i].comments.length %></p>
-							</article>
 						</a>
+							<article class="product-box_data">
+								<a href="/products/detalle/<%= usuario.productos[i].id %>">
+									<h2><%= usuario.productos[i].nombre %></h2>
+								</a>
+								
+								<p><%= usuario.productos[i].descripcion %></p>
+								<p>Comentarios: <%= usuario.productos[i].comentarios.length %></p>
+								<p>Vendedor: <strong><%= usuario.nombre %></strong></p>
+							</article>
+						
 					</section>
 				</div>
 			<% } %>
 		</div>
 	</div>
 	<!-- /Mis productos -->
+ 
 
 
 	<!-- footer -->
