--- a/views/register.ejs
+++ b/views/register.ejs
@@ -23,7 +23,12 @@
 
 <body>
 	<!-- Header -->
-	<%- include('./partials/header') %>
+	<% if(locals.user != undefined){ %>
+		<%- include('./partials/headerLogueado') %>
+	<% } %>
+	<% if(locals.user == undefined){ %>
+		<%- include('./partials/header') %>
+	<% } %>
 	<!-- /Header -->
 
 	<div class="col-12">
@@ -33,7 +38,7 @@
 	<!-- Formulario Register -->
 			
 	<section class="register">  
-		<form action="/users/profile" method="POST" class="formRegister">
+		<form action="/users/register" method="POST" class="formRegister">
 
 			<label for="email">Correo Electrónico</label>
 			<input id="email" name="email" type="email" placeholder="Ingrese su email">
