--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -71,7 +71,7 @@
 					<section class="product-box">
 						<a href="/products/detalle/<%= usuario.productos[i].id %>">
 							<figure class="product-box_image">
-								<img src="<%= usuario.productos[i].foto %>" alt="<%= usuario.productos[i].nombre %>">
+								<inomg src="<%= usuario.productos[i].foto %>" alt="<%= usuario.productos[i].nombre %>">
 							</figure>
 						</a>
 							<article class="product-box_data">
