--- a/views/register.ejs
+++ b/views/register.ejs
@@ -48,13 +48,16 @@
 
 			<label for="password">Contraseña</label>
 			<input id="password" name="password" type="password" placeholder="Cree una contraseña">
-			
+			 
 			<label>Fecha de nacimiento</label>
 			<input id="fechaNacimiento" name="fechaNacimiento" type="date" placeholder="dd/mm/aaaa">
+			
+			<label for="dni">DNI</label>
+			<input id="dni" name="dni" type="number" placeholder="Ingrese su DNI">
 
 			<label>Foto de perfil</label>
 			<input id="fotoPerfil" name="fotoPerfil" type="text" placeholder="Ingrese su foto de perfil">
-			<div class="password"></div>
+			<!-- <div class="password"></div> -->
 	
 			<button type="submit">Registrarse</button>
 			<p class="abajoDelBoton"><a href="/users/login">¿Ya tienes una cuenta? Inicia sesión aquí</a></p>
